# face_mouse

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
include/face_mouse/: particle_filter.h  video_tracker.h
include/mp_tracker/: mouse_control.h  particle.h  particle_filter.h  video_tracker.h
src/: main.cpp  mouse_control.cpp  particle_filter.cpp  run_pf.cpp  test_mouse.cpp  video_tracker.cpp
